# NotDec-wasm2llvm

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  format-codes.sh
.githooks/: pre-commit
cmake/: FindLLVM.cmake
include/notdec-wasm2llvm/: commandlines.def  interface.h  parser-block.h  parser.h  utils.h
lib/notdec-wasm2llvm/: CMakeLists.txt  interface.cpp  parser-block.cpp  parser-instruction.cpp  parser.cpp  utils.cpp
test/: CMakeLists.txt  README.md
test/sysy/: .gitignore  CMakeLists.txt  Makefile  README.md  test_runner.py
tools/: CMakeLists.txt
tools/notdec-wasm2llvm/: CMakeLists.txt  notdec-wasm2llvm.cpp
